<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main_teacher">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/add_video"
                android:layout_margin="15dp"
                android:id="@+id/titleAdd_activity"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:clickable="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_video"
                android:layout_marginRight="15dp"
                android:textSize="@dimen/small_text_size"
                android:background="@color/colorPrimary"
                android:textColor="@color/background_color"
                android:textStyle="bold"
                android:id="@+id/select_video"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:onClick="selectVideo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/title_video"
                android:text="@string/no_video_selected"
                android:textSize="@dimen/small_text_size"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="150dp"
            android:textSize="@dimen/small_text_size"
            android:background="@color/colorPrimary"
            android:textColor="@color/background_color"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:id="@+id/add_video_ok"
            android:layout_gravity="right"
            android:padding="10dp"
            android:onClick="addVideo"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBar_upload"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            style="@style/CustomProgressBar"
            android:layout_gravity="center"
            android:layout_margin="5dip"
            android:visibility="gone"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar_upload"
            android:layout_gravity="center"
            android:id="@+id/txtPercentage"
            android:text="@string/upload_inProgress"
            android:textSize="@dimen/small_text_size"
            android:visibility="gone"
            />

    </LinearLayout>
</RelativeLayout>
